--- a/src/features/nhanh/bills/notebooks/local_test.ipynb
+++ b/src/features/nhanh/bills/notebooks/local_test.ipynb
@@ -13,10 +13,10 @@
         "- Khi code trên CloudRun thay đổi, notebook tự động sử dụng code mới\n",
         "- Không cần copy/paste code - chỉ cần chạy lại notebook sau khi code thay đổi\n",
         "\n",
-        "**Flow:**\n",
-        "1. Extract: Lấy dữ liệu bills từ Nhanh API\n",
-        "2. Load: Upload lên GCS (Bronze layer) và setup External Tables\n",
-        "3. Transform: Transform từ Raw → Clean (Flattened) tables\n",
+        "**Flow mới (Flatten trong Python, Load trực tiếp vào Fact Tables):**\n",
+        "1. Extract: Lấy dữ liệu bills từ Nhanh API (raw nested structures)\n",
+        "2. Flatten + Load: Flatten nested structures trong Python → Upload GCS (backup) → Load trực tiếp vào Fact Tables (`nhanhVN.fact_sales_bills_v3_0`, `nhanhVN.fact_sales_bills_product_v3_0`)\n",
+        "3. ✅ Không cần Transform step nữa - flatten đã được làm trong loader\n",
         "\n",
         "**Sử dụng khi:**\n",
         "- Test pipeline trước khi deploy\n",
@@ -183,9 +183,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Option 1: Extract + Load (Bronze Layer)\n",
+        "### Option 1: Extract + Load (Trực tiếp vào Fact Tables)\n",
         "\n",
-        "Chạy Extract và Load cho date range cụ thể.\n"
+        "Chạy Extract và Load cho date range cụ thể. \n",
+        "- Data sẽ được flatten trong Python (loader)\n",
+        "- Upload lên GCS để backup\n",
+        "- Load trực tiếp vào Fact Tables: `nhanhVN.fact_sales_bills_v3_0` và `nhanhVN.fact_sales_bills_product_v3_0`\n"
       ]
     },
     {
@@ -221,9 +224,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Option 2: Transform (Raw → Clean)\n",
+        "### Option 2: Transform (DEPRECATED - Không cần nữa)\n",
         "\n",
-        "Chạy Transform để flatten data từ External Tables sang Clean Tables.\n"
+        "⚠️ **DEPRECATED**: Transform step không còn cần thiết vì flatten đã được làm trong loader.\n",
+        "Data được load trực tiếp vào Fact Tables trong Option 1.\n",
+        "\n",
+        "Nếu vẫn muốn test transform (ví dụ: từ bronze raw tables), có thể uncomment cell bên dưới.\n"
       ]
     },
     {
@@ -232,28 +238,33 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Chạy Transform\n",
-        "print(\"=\" * 60)\n",
-        "print(\"Đang chạy Transform Pipeline (Raw → Clean)\")\n",
-        "print(\"=\" * 60)\n",
+        "# # ⚠️ DEPRECATED: Transform không còn cần thiết vì flatten đã được làm trong loader\n",
+        "# # Chỉ dùng nếu muốn test transform từ bronze raw tables\n",
+        "# print(\"=\" * 60)\n",
+        "# print(\"Đang chạy Transform Pipeline (Raw → Clean)\")\n",
+        "# print(\"⚠️ Lưu ý: Transform step đã được tích hợp vào loader, không cần chạy riêng\")\n",
+        "# print(\"=\" * 60)\n",
         "\n",
-        "result = pipeline.run_transform()\n",
+        "# # result = pipeline.run_transform()\n",
         "\n",
-        "print(\"\\n\" + \"=\" * 60)\n",
-        "print(\"Kết quả Transform:\")\n",
-        "print(\"=\" * 60)\n",
-        "for key, value in result.items():\n",
-        "    print(f\"{key}: {value}\")\n",
-        "print(\"=\" * 60)\n"
+        "# # print(\"\\n\" + \"=\" * 60)\n",
+        "# # print(\"Kết quả Transform:\")\n",
+        "# # print(\"=\" * 60)\n",
+        "# # for key, value in result.items():\n",
+        "# #     print(f\"{key}: {value}\")\n",
+        "# # print(\"=\" * 60)\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Option 3: Full Pipeline (Extract + Load + Transform)\n",
+        "### Option 3: Full Pipeline (Extract + Load)\n",
         "\n",
-        "Chạy toàn bộ pipeline từ đầu đến cuối.\n"
+        "Chạy toàn bộ pipeline từ đầu đến cuối.\n",
+        "- Extract: Lấy data từ Nhanh API\n",
+        "- Load: Flatten và load trực tiếp vào Fact Tables\n",
+        "- ⚠️ Lưu ý: `run_full_pipeline()` vẫn có transform step (backward compatibility), nhưng thực tế không cần vì flatten đã được làm trong loader\n"
       ]
     },
     {
@@ -377,7 +388,10 @@
       "source": [
         "### Test Loader\n",
         "\n",
-        "Test loader để upload lên GCS và setup External Tables.\n"
+        "Test loader để flatten data, upload lên GCS (backup) và load vào Fact Tables.\n",
+        "- Loader sẽ tự động flatten nested structures (customer, payment, vat)\n",
+        "- Upload flattened data lên GCS\n",
+        "- Load trực tiếp vào Fact Tables: `nhanhVN.fact_sales_bills_v3_0` và `nhanhVN.fact_sales_bills_product_v3_0`\n"
       ]
     },
     {
@@ -386,39 +400,75 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# # Test Loader - Upload và setup External Tables\n",
-        "# # Lưu ý: Cần có dữ liệu từ extractor trước\n",
+        "# # Test Loader - Flatten, upload GCS và load vào Fact Tables\n",
+        "# # Lưu ý: Cần có dữ liệu từ extractor trước (raw nested structures)\n",
         "# from datetime import date\n",
         "\n",
         "# test_date = date.today()\n",
-        "# test_bills = [{\"id\": \"test\", \"code\": \"TEST001\"}]  # Sample data\n",
-        "# test_products = [{\"billId\": \"test\", \"productId\": \"prod1\"}]  # Sample data\n",
+        "# # Sample raw bill với nested structures (giống data từ API)\n",
+        "# test_bills = [{\n",
+        "#     \"id\": 12345,\n",
+        "#     \"depotId\": 1,\n",
+        "#     \"date\": \"2025-01-15\",\n",
+        "#     \"type\": 2,\n",
+        "#     \"mode\": 2,\n",
+        "#     \"customer\": {\"id\": 100, \"name\": \"Test Customer\", \"mobile\": \"0123456789\", \"address\": \"Test Address\"},\n",
+        "#     \"sale\": {\"id\": 50, \"name\": \"Test Sale\"},\n",
+        "#     \"created\": {\"id\": 10, \"name\": \"test@example.com\"},\n",
+        "#     \"payment\": {\n",
+        "#         \"amount\": 1000000,\n",
+        "#         \"customerAmount\": 1000000,\n",
+        "#         \"discount\": 0,\n",
+        "#         \"points\": 0,\n",
+        "#         \"cash\": {\"amount\": 1000000},\n",
+        "#         \"transfer\": {\"amount\": 0, \"accountId\": None},\n",
+        "#         \"credit\": {\"amount\": 0}\n",
+        "#     },\n",
+        "#     \"description\": \"Test bill\"\n",
+        "# }]\n",
+        "# # Sample raw product với nested vat\n",
+        "# test_products = [{\n",
+        "#     \"bill_id\": 12345,\n",
+        "#     \"id\": 999,\n",
+        "#     \"code\": \"PROD001\",\n",
+        "#     \"barcode\": \"123456789\",\n",
+        "#     \"name\": \"Test Product\",\n",
+        "#     \"quantity\": 1.0,\n",
+        "#     \"price\": 1000000.0,\n",
+        "#     \"discount\": 0.0,\n",
+        "#     \"vat\": {\"percent\": 10, \"amount\": 100000.0},\n",
+        "#     \"amount\": 1100000.0\n",
+        "# }]\n",
         "\n",
         "# print(f\"Đang test Loader cho ngày: {test_date}\")\n",
+        "# print(\"⚠️ Loader sẽ tự động flatten nested structures và load vào Fact Tables\")\n",
         "\n",
-        "# # Upload bills\n",
+        "# # Load bills (sẽ flatten và load vào fact_sales_bills_v3_0)\n",
         "# if test_bills:\n",
         "#     bills_path = loader.load_bills(data=test_bills, partition_date=test_date)\n",
-        "#     print(f\"Bills uploaded to: {bills_path}\")\n",
+        "#     print(f\"✅ Bills flattened, uploaded to GCS: {bills_path}\")\n",
+        "#     print(f\"✅ Bills loaded to: {loader.bills_table_id}\")\n",
         "\n",
-        "# # Upload products\n",
+        "# # Load products (sẽ flatten và load vào fact_sales_bills_product_v3_0)\n",
         "# if test_products:\n",
         "#     products_path = loader.load_bill_products(data=test_products, partition_date=test_date)\n",
-        "#     print(f\"Products uploaded to: {products_path}\")\n",
+        "#     print(f\"✅ Products flattened, uploaded to GCS: {products_path}\")\n",
+        "#     print(f\"✅ Products loaded to: {loader.products_table_id}\")\n",
         "\n",
-        "# # Setup External Tables\n",
-        "# print(\"\\nSetting up External Tables...\")\n",
-        "# external_tables = loader.setup_external_tables()\n",
-        "# print(f\"External Tables: {external_tables}\")\n"
+        "# # Setup External Tables (optional, backward compatibility)\n",
+        "# # print(\"\\nSetting up External Tables (optional)...\")\n",
+        "# # external_tables = loader.setup_external_tables()\n",
+        "# # print(f\"External Tables: {external_tables}\")\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Test Transformer\n",
+        "### Test Transformer (DEPRECATED)\n",
         "\n",
-        "Test transformer để transform data từ Raw sang Clean.\n"
+        "⚠️ **DEPRECATED**: Transformer không còn cần thiết vì flatten đã được tích hợp vào loader.\n",
+        "Data được flatten và load trực tiếp vào Fact Tables trong loader.\n"
       ]
     },
     {
@@ -427,15 +477,98 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# # Test Transformer - Transform từ Raw → Clean\n",
-        "# print(\"Đang test Transformer...\")\n",
-        "# print(\"⚠️ Lưu ý: Cần có dữ liệu trong External Tables trước\")\n",
+        "# # ⚠️ DEPRECATED: Transformer không còn cần thiết\n",
+        "# # Flatten đã được tích hợp vào loader, data được load trực tiếp vào Fact Tables\n",
+        "# # print(\"Đang test Transformer...\")\n",
+        "# # print(\"⚠️ DEPRECATED: Transformer không còn cần thiết vì flatten đã được làm trong loader\")\n",
+        "# # print(\"⚠️ Lưu ý: Cần có dữ liệu trong External Tables trước (nếu muốn test từ bronze raw)\")\n",
         "\n",
-        "# result = transformer.transform_flatten()\n",
+        "# # result = transformer.transform_flatten()\n",
         "\n",
-        "# print(f\"\\nKết quả Transform:\")\n",
-        "# for key, value in result.items():\n",
-        "#     print(f\"  - {key}: {value}\")\n"
+        "# # print(f\"\\nKết quả Transform:\")\n",
+        "# # for key, value in result.items():\n",
+        "# #     print(f\"  - {key}: {value}\")\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Verify Data trong Fact Tables\n",
+        "\n",
+        "Sau khi chạy pipeline, verify data đã được load vào Fact Tables.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Verify data trong Fact Tables\n",
+        "from google.cloud import bigquery\n",
+        "from datetime import date\n",
+        "\n",
+        "bq_client = bigquery.Client(project=settings.gcp_project)\n",
+        "\n",
+        "# Check bills table\n",
+        "bills_table_id = f\"{settings.gcp_project}.{settings.target_dataset}.fact_sales_bills_v3_0\"\n",
+        "bills_query = f\"\"\"\n",
+        "SELECT \n",
+        "    COUNT(*) as total_bills,\n",
+        "    COUNT(DISTINCT date) as distinct_dates,\n",
+        "    MIN(date) as min_date,\n",
+        "    MAX(date) as max_date,\n",
+        "    COUNT(DISTINCT customer_id) as distinct_customers\n",
+        "FROM `{bills_table_id}`\n",
+        "WHERE date >= DATE_SUB(CURRENT_DATE(), INTERVAL 30 DAY)\n",
+        "\"\"\"\n",
+        "\n",
+        "print(\"=\" * 60)\n",
+        "print(\"Bills Table Statistics (last 30 days):\")\n",
+        "print(\"=\" * 60)\n",
+        "try:\n",
+        "    bills_job = bq_client.query(bills_query)\n",
+        "    bills_results = bills_job.result()\n",
+        "    for row in bills_results:\n",
+        "        print(f\"Total Bills: {row.total_bills}\")\n",
+        "        print(f\"Distinct Dates: {row.distinct_dates}\")\n",
+        "        print(f\"Date Range: {row.min_date} to {row.max_date}\")\n",
+        "        print(f\"Distinct Customers: {row.distinct_customers}\")\n",
+        "except Exception as e:\n",
+        "    print(f\"⚠️ Error querying bills table: {e}\")\n",
+        "\n",
+        "print(\"\\n\" + \"=\" * 60)\n",
+        "print(\"Products Table Statistics (last 30 days):\")\n",
+        "print(\"=\" * 60)\n",
+        "\n",
+        "# Check products table\n",
+        "products_table_id = f\"{settings.gcp_project}.{settings.target_dataset}.fact_sales_bills_product_v3_0\"\n",
+        "products_query = f\"\"\"\n",
+        "SELECT \n",
+        "    COUNT(*) as total_products,\n",
+        "    COUNT(DISTINCT DATE(extraction_timestamp)) as distinct_dates,\n",
+        "    MIN(DATE(extraction_timestamp)) as min_date,\n",
+        "    MAX(DATE(extraction_timestamp)) as max_date,\n",
+        "    COUNT(DISTINCT bill_id) as distinct_bills,\n",
+        "    COUNT(DISTINCT product_id) as distinct_products\n",
+        "FROM `{products_table_id}`\n",
+        "WHERE DATE(extraction_timestamp) >= DATE_SUB(CURRENT_DATE(), INTERVAL 30 DAY)\n",
+        "\"\"\"\n",
+        "\n",
+        "try:\n",
+        "    products_job = bq_client.query(products_query)\n",
+        "    products_results = products_job.result()\n",
+        "    for row in products_results:\n",
+        "        print(f\"Total Products: {row.total_products}\")\n",
+        "        print(f\"Distinct Dates: {row.distinct_dates}\")\n",
+        "        print(f\"Date Range: {row.min_date} to {row.max_date}\")\n",
+        "        print(f\"Distinct Bills: {row.distinct_bills}\")\n",
+        "        print(f\"Distinct Products: {row.distinct_products}\")\n",
+        "except Exception as e:\n",
+        "    print(f\"⚠️ Error querying products table: {e}\")\n",
+        "\n",
+        "print(\"=\" * 60)\n"
       ]
     }
   ],
